(PC-26302)[PRO] fix: text overflow in offer name

--- a/pro/src/screens/Bookings/BookingsRecapTable/BookingsTable/Cells/BookingOfferCell.module.scss
+++ b/pro/src/screens/Bookings/BookingsRecapTable/BookingsTable/Cells/BookingOfferCell.module.scss
@@ -13,12 +13,6 @@
   }
 }
 
-.crop-line {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
 .booking-offer-additional-info {
   @include fonts.caption;
 
